    - fixed GetEG1Sustain which didn't return correct value
    - bugfix: GetPan always returned -1, 0 or 1

  * src/gig.cpp:
    - bugfix: VCF velocity dynamic range and VCF velocity curve
      weren't saved correctly
    - implemented File::AddDuplicateInstrument()
    - bugfix: negative EG3 depth values were not correctly parsed or
      saved

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems
    - fixed memory leak and memory handling errors when file loading
      fails

Version 3.3.0 (30 Jul 2009)

  * general changes:
    - fixed compilation with gcc 4.3
    - fixes for building with Visual C++
    - minor fix in configure for building DLL on Windows

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far
    - bugfix: removed another iterator invalidation in DeleteSample
    - bugfix in Sample::LoadSampleData*(): reset sample read position to
      sample start before trying to (re)load sample data from file (#82)
    - bugfix: EG3 depth parameter was not saved correctly
    - fixed crash which occured when streaming a gig sample with
      bi-directional (a.k.a. 'pingpong') loop type (fixes #102)

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: saving to the same file after the file size had been
      increased made the file corrupt (#82)
    - bugfix: refuse Chunk::Read() in case chunk has just been added, that
      is not written physically yet (#82)
    - bugfix: saving to the same file after the file size had been
      decreased sometimes also made the file corrupt!
    - bugfix: undefined behavior (e.g. endless loop) when opening zero